# auto-trading

./: README.md  run.py
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/src/: config.py  nice_funcs.py  server.py
backend/src/agents/: trading_agent.py
backend/src/data/: ohlcv_collector.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: ApiKeyForm.tsx  ChatInterface.tsx  SessionModal.tsx
frontend/src/lib/: fetch.ts
